tests/NormalTests/paczka1/small_fuzzy/83701927.err
Error in line 1: LMnHgFNN3P A702 97,8
Error in line 2: E3Vjwl S864 100,0
Error in line 3: LMnHgFNN3P S864 49,3
